WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94434
Do not allocate SQLiteDatabase's m_openErrorMessage until its needed
https://bugs.webkit.org/show_bug.cgi?id=94434
Summary
Do not allocate SQLiteDatabase's m_openErrorMessage until its needed
Benjamin Poulain
Reported
2012-08-19 15:02:46 PDT
Another initialization malloc + memcpy.
Attachments
Patch
(2.36 KB, patch)
2012-08-19 15:27 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2012-08-19 15:27:50 PDT
Created
attachment 159307
[details]
Patch
Benjamin Poulain
Comment 2
2012-08-19 21:03:30 PDT
Comment on
attachment 159307
[details]
Patch Clearing flags on attachment: 159307 Committed
r125992
: <
http://trac.webkit.org/changeset/125992
>
Benjamin Poulain
Comment 3
2012-08-19 21:03:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug